@@ -68,10 +68,6 @@ Properties NotIntersectableLightSource::ToProperties(const ImageMapCache &imgMap
 // InfiniteLightSource
 //------------------------------------------------------------------------------
 
-// This is used to scale the world radius in sun/sky/infinite lights in order to
-// avoid problems with objects that are near the borderline of the world bounding sphere
-const float InfiniteLightSource::LIGHT_WORLD_RADIUS_SCALE = 1.05f;
-
 float InfiniteLightSource::GetEnvRadius(const Scene &scene) {
 	return LIGHT_WORLD_RADIUS_SCALE * scene.sceneBSphere.rad;
 }
